--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -6,9 +6,12 @@ jobs:
     steps:
       - name: Refresh local package index
         run: sudo apt update
-      - name: 
+      - name:  Install Dive
         run: |
           DIVE_VERSION=$(curl -sL "https://api.github.com/repos/wagoodman/dive/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
           curl -fOL "https://github.com/wagoodman/dive/releases/download/v${DIVE_VERSION}/dive_${DIVE_VERSION}_linux_amd64.deb"
           sudo apt install ./dive_${DIVE_VERSION}_linux_amd64.deb
+      - name: Install Docker
+        run: |
+          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
     
