--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -25,5 +25,6 @@ jobs:
           sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
       - name: Run Dive
         run: |
+           echo $GITHUB_TOKEN | docker login ghcr.io -u maxyko --password-stdin
            docker pull ghcr.io/maxyko/demo:1.0.0
     
