--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -25,6 +25,6 @@ jobs:
           sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
       - name: Run Dive
         run: |
-           docker login -u maxyko --password ${{ secrets.GITHUB_TOKEN }} ghcr.io
+           echo ${{ secrets.GITHUB_TOKEN }} | docker login -u maxyko --password-stdin ghcr.io
            docker pull ghcr.io/maxyko/demo:1.0.0
     
