--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -28,6 +28,6 @@ jobs:
         run: |
            echo ${{ secrets.GITHUB_TOKEN }} | docker login -u maxyko --password-stdin ghcr.io
            docker pull $CONT_IMAGE
-           echo "-== Running Dive. ==-"
+           echo "-== Running Dive ==-"
            dive --ci --lowestEfficiency=0.9 $CONT_IMAGE
     
