--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -26,10 +26,16 @@ jobs:
           DIVE_VERSION=$(curl -sL "https://api.github.com/repos/wagoodman/dive/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
           curl -fOL "https://github.com/wagoodman/dive/releases/download/v${DIVE_VERSION}/dive_${DIVE_VERSION}_linux_amd64.deb"
           sudo apt install ./dive_${DIVE_VERSION}_linux_amd64.deb
+      - name: Install asciinema
+        run: |
+          sudo apt-get install asciinema
+          asciinema rec demo.cast
       - name: Run Dive
         run: |
            echo ${{ secrets.GITHUB_TOKEN }} | docker login -u maxyko --password-stdin ghcr.io
            docker pull $CONT_IMAGE
            echo "-== Running Dive ==-"
            dive --ci --lowestEfficiency=0.9 $CONT_IMAGE
+           echo "Asciinema:"
+           asciinema upload demo.cast
     
