--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -28,6 +28,7 @@ jobs:
           sudo apt install ./dive_${DIVE_VERSION}_linux_amd64.deb
       - name: Install asciinema
         run: |
+          sudo apt-get update
           sudo apt-get install asciinema
       - name: Run Dive
         run: |
