--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -28,8 +28,8 @@ jobs:
           sudo apt install ./dive_${DIVE_VERSION}_linux_amd64.deb
       - name: Install asciinema
         run: |
-          sudo apt-get update
-          sudo apt-get install asciinema
+          sudo apt update
+          sudo apt install asciinema
       - name: Run Dive
         run: |
            asciinema rec demo.cast
