--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -38,5 +38,6 @@ jobs:
            asciinema rec -c dive demo.cast
            dive --ci --lowestEfficiency=0.9 $CONT_IMAGE
            echo "Asciinema:"
-           asciinema upload demo.cast
+           ls -lha ./
+           asciinema upload ./demo.cast
     
