--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -39,5 +39,5 @@ jobs:
            dive --ci --lowestEfficiency=0.9 $CONT_IMAGE
            echo "Asciinema:"
            ls -lha ./
-           asciinema upload ./demo.cast
+           asciinema upload
     
